changed class for image on contact page to fix layout bug

--- a/scss/layout/_layouts.scss
+++ b/scss/layout/_layouts.scss
@@ -7,6 +7,10 @@
     margin: 80px auto;
 }
 
+.column-container {
+    width: 46%;
+}
+
 .l-left {
     float: left;
 }
